--- a/cloud-basics/app/package.json
+++ b/cloud-basics/app/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "4.18.2",
     "jest": "29.5.0"
+  },
+  "publishConfig": {
+    "registry": "http://52.200.253.124:8081/repository/npm-private/"
   }
 }
