feat: fix image directory issue

--- a/jenkins/jenkins-exercises/Dockerfile
+++ b/jenkins/jenkins-exercises/Dockerfile
@@ -3,6 +3,7 @@ FROM node:13-alpine
 RUN mkdir -p /usr/app
 
 COPY package*.json /usr/app/
+COPY app/images /usr/app/images/
 COPY app/* /usr/app/
 
 WORKDIR /usr/app
