feat: commit version update

--- a/jenkins/jenkins-exercises/Jenkinsfile
+++ b/jenkins/jenkins-exercises/Jenkinsfile
@@ -40,6 +40,12 @@ pipeline {
                 }
             }
         }
-        
+        stage("Commit version update") {
+            steps {
+                script {
+                    gv.commitVersionUpdate()
+                }
+            }
+        }
     }     
 }
