feat: automate deployment

--- a/jenkins/jenkins-exercises/Jenkinsfile
+++ b/jenkins/jenkins-exercises/Jenkinsfile
@@ -40,6 +40,14 @@ pipeline {
                 }
             }
         }
+        stage("Deploy to EC2") {
+            steps {
+                script {
+                    gv.deployImage()
+                }
+            }
+        }
+        /** 
         stage("Commit version update") {
             steps {
                 script {
@@ -47,5 +55,6 @@ pipeline {
                 }
             }
         }
+        */
     }     
 }
