--- a/jenkins/jenkins-exercises/Jenkinsfile
+++ b/jenkins/jenkins-exercises/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
         stage("increment version") {
             when {
                 expression {
-                    return env.GIT_BRANCH == "main"
+                    return env.GIT_BRANCH == "master"
                 }
             }
             steps {
