feat: create helm chart and update resource default value

--- a/k8s/kubernetes-exercises/java-app/values-override.yaml
+++ b/k8s/kubernetes-exercises/java-app/values-override.yaml
@@ -2,7 +2,7 @@ appName: java-app
 appReplicas: 3
 registrySecret: my-registry-key
 appContainerName: javamysqlapp
-appImage: nanajanashia/demo-app
+appImage: karosi12/java-app:v1
 appVersion: java-mysql-app
 containerPort: 8080
 
