--- a/k8s/kubernetes-exercises/k8s-deployment/db-secret.yaml
+++ b/k8s/kubernetes-exercises/k8s-deployment/db-secret.yaml
@@ -5,10 +5,10 @@ metadata:
 type: Opaque
 data:
   # my-user  
-  db_user: bXktdXNlcg== 
+  db_user: bXktdXNlcgo=
   # my-pass
-  db_pwd: bXktcGFzcw==
+  db_pwd: bXktcGFzcwo=
   # my-app-db
-  db_name: bXktYXBwLWRi
+  db_name: bXktYXBwLWRiCg==
   # secret-root-pass
-  db_root_pwd: c2VjcmV0LXJvb3QtcGFzcw==
+  db_root_pwd: c2VjcmV0LXJvb3QtcGFzcwo=
