--- a/k8s/kubernetes-exercises/k8s-deployment/java-app-ingress.yaml
+++ b/k8s/kubernetes-exercises/k8s-deployment/java-app-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: java-app-ingress
 spec:
   rules:
-  - host: host-name-here
+  - host: my-java-app.com
     http:
       paths:
       - backend:
