--- a/k8s/kubernetes-exercises/k8s-deployment/java-app.yaml
+++ b/k8s/kubernetes-exercises/k8s-deployment/java-app.yaml
@@ -18,7 +18,7 @@ spec:
       - name: my-registry-key
       containers:
       - name: javamysqlapp
-        image: nanajanashia/demo-app:java-mysql-app
+        image: karosi12/java-app:v1
         ports:
         - containerPort: 8080
         env:
