--- a/build-tools-exercises/ansible/start_container/files/docker-compose.yaml
+++ b/build-tools-exercises/ansible/start_container/files/docker-compose.yaml
@@ -1,34 +1,37 @@
 version: '3'
 services:
-  java-app:
+  bootcamp-java-app:
     image: karosi12/java-app:v1
     environment:
-      - DB_USER=user
-      - DB_PWD=pass
-      - DB_SERVER=mysql
-      - DB_NAME=my-app-db
+      - DB_USER=${DB_USER}
+      - DB_PWD=${DB_PWD}
+      - DB_SERVER=${DB_SERVER}
+      - DB_NAME=${DB_NAME}
     ports:
     - 8080:8080
-    container_name: my-java-app
+    container_name: bootcamp-java-app
   mysql:
     image: mysql
     ports:
       - 3306:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=my-secret-pw
-      - MYSQL_DATABASE=my-app-db
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=pass
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     volumes:
     - mysql-data:/var/lib/mysql
     container_name: mysql
+    command: --default-authentication-plugin=mysql_native_password
   phpmyadmin:
     image: phpmyadmin
-    environment:
-      PMA_HOST: mysql
     ports:
       - 8083:80
-    container_name: myadmin
+    environment:
+      - PMA_HOST=${PMA_HOST}
+      - PMA_PORT=${PMA_PORT}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    container_name: phpmyadmin
 volumes:
   mysql-data:
     driver: local
