feat: configure server using ansible

--- a/build-tools-exercises/ansible/ansible.cfg
+++ b/build-tools-exercises/ansible/ansible.cfg
@@ -1,4 +1,12 @@
 [defaults]
 host_key_checking = False
+inventory = hosts
 
 interpreter_python = /usr/bin/python3
+
+
+
+# Relevant for ansible server
+enable_plugins = amazon.aws.aws_ec2
+remote_user = ubuntu
+private_key_file = /home/ubuntu/ansible-managed-server-key.pem
